--- a/README.rdoc
+++ b/README.rdoc
@@ -12,6 +12,11 @@ Things you may want to cover:
 * Configuration
 
 * Database creation
+  - Create and update your database.yml file to include your db username and password.
+  - Change default postgres password by loging in and running ``` /password ```
+  - run ``` rake db:create ```
+  - run ``` rake db:migrate ```
+  - run ``` rake db:seed ``` for test data.
 
 * Database initialization
 
