--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,19 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
+Application Information:
 
 * Ruby version
 
 * System dependencies
 
 * Configuration
+
+ - Run the VM configuration with Vagrant. Start by navigating to your project folder and using this command. ``` Vagrant Up ```
+ - After the installations have finished. Login to the vm using ``` Vagrant SSH ```. This will establish a connect with your vm via your console.
+ - Once the connection is established change directory into the shared project folder by using ``` cd /vagrant ```.
+ - run ``` sudo apt install ruby-railties ```.
+ - run ``` bundle install ```.
+ - Start the server and bind it to 0.0.0.0 to view the application outside the VM. Run ``` rails s -b 0.0.0.0 ```
 
 * Database creation
   - Create and update your database.yml file to include your db username and password.
@@ -26,8 +30,5 @@ Things you may want to cover:
 
 * Deployment instructions
 
-* ...
 
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
